# Deck

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  TZ-Folder-Track-Editor-UI.md  index.html  style.css
.github/workflows/: linux-build.yml  pages.yml  release.yml  tests.yml  windows-build.yml
Source/: Main.cpp  MainBurner.cpp
Source/analysis/: AudioFeatures.cpp  AudioFeatures.h  EssentiaAnalyzer.cpp  EssentiaAnalyzer.h  EssentiaBridge.cpp  EssentiaBridge.h  LoudnessMeter.cpp  LoudnessMeter.h  PeaqEvaluator.cpp  PeaqEvaluator.h  PerceptualQualityGuard.cpp  PerceptualQualityGuard.h  PsychoacousticMetrics.cpp  PsychoacousticMetrics.h  SpectrumAnalyzer.cpp  SpectrumAnalyzer.h  TruePeakMeter.cpp  TruePeakMeter.h  WowFlutterAnalyzer.cpp  WowFlutterAnalyzer.h
Source/audio/: PerceptualPlaybackProcessor.cpp  PerceptualPlaybackProcessor.h  PreviewEngine.cpp  PreviewEngine.h
Source/dsp/: AudioConstants.h  CassetteAutoMaster.cpp  CassetteAutoMaster.h  CassetteMasteringPlanner.cpp  CassetteMasteringPlanner.h  CassetteProfile.cpp  CassetteProfile.h  MasteringOptions.h
Source/dsp/dynamics/: DynamicEQ.cpp  DynamicEQ.h  MaskingNoiseGate.cpp  MaskingNoiseGate.h  RoughnessDeEsser.cpp  RoughnessDeEsser.h  TransientShaper.cpp  TransientShaper.h  TruePeakLimiter.cpp  TruePeakLimiter.h
Source/dsp/filters/: BiquadFilter.cpp  BiquadFilter.h
Source/dsp/graph/: AdaptiveMasteringProcessor.cpp  AdaptiveMasteringProcessor.h  MasteringGraph.cpp  MasteringGraph.h
Source/dsp/ml/: OnnxStnRunner.cpp  OnnxStnRunner.h  StnGridModel.cpp  StnGridModel.h  TapeAwareSoftClipper.cpp  TapeAwareSoftClipper.h
Source/dsp/stereo/: MidSideProcessor.cpp  MidSideProcessor.h
Source/dsp/tape/: RubberBandWowProcessor.cpp  RubberBandWowProcessor.h  WowFlutterEmulator.cpp  WowFlutterEmulator.h
Source/export/: PreflightTones.cpp  PreflightTones.h  WavExporter.cpp  WavExporter.h
Source/io/: AudioFileLoader.cpp  AudioFileLoader.h  AudioResampler.cpp  AudioResampler.h  DropPayload.h  FtpClient.cpp  FtpClient.h  PiTapeControlClient.cpp  PiTapeControlClient.h  PiTapeRemoteStatus.cpp  PiTapeRemoteStatus.h  PiTapeSessionState.cpp  PiTapeSessionState.h  PiTapeSettings.cpp  PiTapeSettings.h  PiTapeTrace.h  PiTapeUploader.cpp  PiTapeUploader.h
Source/plugin/: CassetteTapePrepEditor.cpp  CassetteTapePrepEditor.h  CassetteTapePrepProcessor.cpp  CassetteTapePrepProcessor.h
Source/project/: FolderMixBuilder.cpp  FolderMixBuilder.h  MixtapeEditController.cpp  MixtapeEditController.h  MixtapeProject.cpp  MixtapeProject.h  SideRenderer.cpp  SideRenderer.h
Source/threading/: AnalysisWorker.cpp  AnalysisWorker.h
Source/ui/: AudioDropTarget.cpp  AudioDropTarget.h  CompareWaveformDisplay.cpp  CompareWaveformDisplay.h  ConfirmDialog.cpp  ConfirmDialog.h  DropHeroPanel.cpp  DropHeroPanel.h  ImportFolderPicker.h  MainComponent.cpp  MainComponent.h  MeterPanel.cpp  MeterPanel.h  MixtapeBuilderPanel.cpp  MixtapeBuilderPanel.h  MoreOptionsPanel.cpp  MoreOptionsPanel.h  PiTapeControlDialog.cpp  PiTapeControlDialog.h  PiTapeSettingsPanel.cpp  PiTapeSettingsPanel.h  PreviewMonitorPanel.cpp  PreviewMonitorPanel.h  ProcessingOptionsPanel.cpp  ProcessingOptionsPanel.h  ProcessingSettingsDialog.cpp  ProcessingSettingsDialog.h  ReadinessPanel.cpp  ReadinessPanel.h  TapeSetupPanel.cpp  TapeSetupPanel.h  TrackListEditor.cpp  TrackListEditor.h  UiTheme.h  WaveformDisplay.cpp  WaveformDisplay.h  WizardStepStrip.cpp  WizardStepStrip.h  WorkflowStrip.cpp  WorkflowStrip.h
Source/ui/burner/: AnalogVuMeter.cpp  AnalogVuMeter.h  CassetteBurnerComponent.cpp  CassetteBurnerComponent.h  ProjectSidebar.cpp  ProjectSidebar.h  StatusBar.cpp  StatusBar.h  TapeParameterPanel.cpp  TapeParameterPanel.h  TapeTimelineView.cpp  TapeTimelineView.h  TransportBar.cpp  TransportBar.h
Source/ui/look/: CassetteBurnerLook.cpp  CassetteBurnerLook.h  CassetteLook.cpp  CassetteLook.h
Source/util/: AppLocale.cpp  AppLocale.h  AppLog.cpp  AppLog.h  CassetteBuildFlags.h
Tests/: MANUAL_QA.md  MasteringTests.cpp  TestAppLogStub.cpp  TestHelpers.h
Tests/Fixtures/: README.txt
Tools/: AnalyzeExport.cpp  PiTapeFlowTest.cpp  PiTapeUploadTest.cpp  RenderCompare.cpp
cmake/: CassetteCore.cmake  LegacyMacOptions.cmake  LocalPiTape.cmake.example  MacPlatform.cmake  OptionalDeps.cmake  PiTapeDevOptions.cmake  ProdOptions.cmake
docs/: index.html  style.css
pi-tape/: README.md  config.example.env  manifest.example.json
pi-tape/scripts/: deck-upload.sh  pi-tape-daemon.py  pi-tape-play.sh  setup-pi-remote.sh
pi-tape/server/: docker-compose.yml
pi-tape/systemd/: pi-tape-daemon.service  pi-tape-play.service  pi-tape-play.timer
scripts/: BUILD-LINUX.md  BUILD-WINDOWS.md  apply_app_icon.sh  build_windows_mingw.bat  build_windows_msvc.ps1  capture_screenshots.sh  copy_stn_onnx_if_present.sh  export_stn_onnx.py  extract_charli_fixture.sh  find_deck_binary.sh  generate_docs_mockups.py  generate_test_fixture.py  heic_to_scan_pdf.py  install_mac_app.sh  make_icns.py  make_icns.sh  package_legacy_mac.sh  package_linux.sh  package_release.sh  pi-tape-automation-test.sh  resign_mac_app.sh  round_app_icon.py  run-deck-pi-trace.sh  run_audit.sh  run_peaq.sh  verify_mac_app.sh  verify_prod_app.sh
